Add new projects; improve Makefile

--- a/.gitmodules
+++ b/.gitmodules
@@ -226,3 +226,402 @@
 [submodule "caf-testsuite"]
 	path = caf-testsuite
 	url = git@github.com:uhhpctools/caf-testsuite.git
+[submodule "FATODE"]
+	path = FATODE
+	url = ssh://git@github.com/ComputationalScienceLaboratory/FATODE
+[submodule "flook"]
+	path = flook
+	url = ssh://git@github.com/ElectronicStructureLibrary/flook
+[submodule "feq-parse"]
+	path = feq-parse
+	url = ssh://git@github.com/FluidNumerics/feq-parse
+[submodule "ford"]
+	path = ford
+	url = ssh://git@github.com/Fortran-FOSS-Programmers/ford
+[submodule "gFTL"]
+	path = gFTL
+	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/gFTL
+[submodule "gFTL-shared"]
+	path = gFTL-shared
+	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/gFTL-shared
+[submodule "pFUnit"]
+	path = pFUnit
+	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/pFUnit
+[submodule "pFlogger"]
+	path = pFlogger
+	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/pFlogger
+[submodule "yaFyaml"]
+	path = yaFyaml
+	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/yaFyaml
+[submodule "serialbox"]
+	path = serialbox
+	url = ssh://git@github.com/GridTools/serialbox
+[submodule "node-fortran"]
+	path = node-fortran
+	url = ssh://git@github.com/IonicaBizau/node-fortran
+[submodule "node.fortran"]
+	path = node.fortran
+	url = ssh://git@github.com/IonicaBizau/node.fortran
+[submodule "focal"]
+	path = focal
+	url = ssh://git@github.com/LKedward/focal
+[submodule "shroud"]
+	path = shroud
+	url = ssh://git@github.com/LLNL/shroud
+[submodule "PoisFFT"]
+	path = PoisFFT
+	url = ssh://git@github.com/LadaF/PoisFFT
+[submodule "NPY-for-Fortran"]
+	path = NPY-for-Fortran
+	url = ssh://git@github.com/MRedies/NPY-for-Fortran
+[submodule "stdlib_os"]
+	path = stdlib_os
+	url = ssh://git@github.com/MarDiehl/stdlib_os
+[submodule "hipfort"]
+	path = hipfort
+	url = ssh://git@github.com/ROCmSoftwarePlatform/hipfort
+[submodule "lapack"]
+	path = lapack
+	url = ssh://git@github.com/Reference-LAPACK/lapack
+[submodule "ftl"]
+	path = ftl
+	url = ssh://git@github.com/SCM-NV/ftl
+[submodule "SHTOOLS"]
+	path = SHTOOLS
+	url = ssh://git@github.com/SHTOOLS/SHTOOLS
+[submodule "SLICOT-Reference"]
+	path = SLICOT-Reference
+	url = ssh://git@github.com/SLICOT/SLICOT-Reference
+[submodule "SeisSol"]
+	path = SeisSol
+	url = ssh://git@github.com/SeisSol/SeisSol
+[submodule "netcdf-fortran"]
+	path = netcdf-fortran
+	url = ssh://git@github.com/Unidata/netcdf-fortran
+[submodule "SciFortran"]
+	path = SciFortran
+	url = ssh://git@github.com/aamaricci/SciFortran
+[submodule "fox"]
+	path = fox
+	url = ssh://git@github.com/andreww/fox
+[submodule "fypp"]
+	path = fypp
+	url = ssh://git@github.com/aradi/fypp
+[submodule "arrayfire-fortran"]
+	path = arrayfire-fortran
+	url = ssh://git@github.com/arrayfire/arrayfire-fortran
+[submodule "camfort"]
+	path = camfort
+	url = ssh://git@github.com/camfort/camfort
+[submodule "clfortran"]
+	path = clfortran
+	url = ssh://git@github.com/cass-support/clfortran
+[submodule "illustrate"]
+	path = illustrate
+	url = ssh://git@github.com/ccsb-scripps/illustrate
+[submodule "paramonte"]
+	path = paramonte
+	url = ssh://git@github.com/cdslaborg/paramonte
+[submodule "fortran-utils"]
+	path = fortran-utils
+	url = ssh://git@github.com/certik/fortran-utils
+[submodule "qcontainers"]
+	path = qcontainers
+	url = ssh://git@github.com/darmar-lt/qcontainers
+[submodule "convert_FORTRAN_case"]
+	path = convert_FORTRAN_case
+	url = ssh://git@github.com/dav05/convert_FORTRAN_case
+[submodule "mpifx"]
+	path = mpifx
+	url = ssh://git@github.com/dftbplus/mpifx
+[submodule "scalapackfx"]
+	path = scalapackfx
+	url = ssh://git@github.com/dftbplus/scalapackfx
+[submodule "FortranPatterns"]
+	path = FortranPatterns
+	url = ssh://git@github.com/farhanjk/FortranPatterns
+[submodule "fortrancallgraph"]
+	path = fortrancallgraph
+	url = ssh://git@github.com/fortesg/fortrancallgraph
+[submodule "blocktran"]
+	path = blocktran
+	url = ssh://git@github.com/fortran-gaming/blocktran
+[submodule "fpm"]
+	path = fpm
+	url = ssh://git@github.com/fortran-lang/fpm
+[submodule "stdlib"]
+	path = stdlib
+	url = ssh://git@github.com/fortran-lang/stdlib
+[submodule "h5fortran"]
+	path = h5fortran
+	url = ssh://git@github.com/geospace-code/h5fortran
+[submodule "maptran3d"]
+	path = maptran3d
+	url = ssh://git@github.com/geospace-code/maptran3d
+[submodule "nc4fortran"]
+	path = nc4fortran
+	url = ssh://git@github.com/geospace-code/nc4fortran
+[submodule "fortran-curl"]
+	path = fortran-curl
+	url = ssh://git@github.com/interkosmos/fortran-curl
+[submodule "fortran-lua53"]
+	path = fortran-lua53
+	url = ssh://git@github.com/interkosmos/fortran-lua53
+[submodule "fortran-motif"]
+	path = fortran-motif
+	url = ssh://git@github.com/interkosmos/fortran-motif
+[submodule "fortran-pcre2"]
+	path = fortran-pcre2
+	url = ssh://git@github.com/interkosmos/fortran-pcre2
+[submodule "fortran-sdl2"]
+	path = fortran-sdl2
+	url = ssh://git@github.com/interkosmos/fortran-sdl2
+[submodule "fortran-sqlite3"]
+	path = fortran-sqlite3
+	url = ssh://git@github.com/interkosmos/fortran-sqlite3
+[submodule "fortran-tcl86"]
+	path = fortran-tcl86
+	url = ssh://git@github.com/interkosmos/fortran-tcl86
+[submodule "fortran-unix"]
+	path = fortran-unix
+	url = ssh://git@github.com/interkosmos/fortran-unix
+[submodule "fortran-xlib"]
+	path = fortran-xlib
+	url = ssh://git@github.com/interkosmos/fortran-xlib
+[submodule "fortran-zlib"]
+	path = fortran-zlib
+	url = ssh://git@github.com/interkosmos/fortran-zlib
+[submodule "Fortran-Astrodynamics-Toolkit"]
+	path = Fortran-Astrodynamics-Toolkit
+	url = ssh://git@github.com/jacobwilliams/Fortran-Astrodynamics-Toolkit
+[submodule "NumDiff"]
+	path = NumDiff
+	url = ssh://git@github.com/jacobwilliams/NumDiff
+[submodule "PCHIP"]
+	path = PCHIP
+	url = ssh://git@github.com/jacobwilliams/PCHIP
+[submodule "astro-fortran"]
+	path = astro-fortran
+	url = ssh://git@github.com/jacobwilliams/astro-fortran
+[submodule "fortran-csv-module"]
+	path = fortran-csv-module
+	url = ssh://git@github.com/jacobwilliams/fortran-csv-module
+[submodule "json-fortran"]
+	path = json-fortran
+	url = ssh://git@github.com/jacobwilliams/json-fortran
+[submodule "nlesolver-fortran"]
+	path = nlesolver-fortran
+	url = ssh://git@github.com/jacobwilliams/nlesolver-fortran
+[submodule "pyplot-fortran"]
+	path = pyplot-fortran
+	url = ssh://git@github.com/jacobwilliams/pyplot-fortran
+[submodule "quadpack"]
+	path = quadpack
+	url = ssh://git@github.com/jacobwilliams/quadpack
+[submodule "regridpack"]
+	path = regridpack
+	url = ssh://git@github.com/jacobwilliams/regridpack
+[submodule "roots-fortran"]
+	path = roots-fortran
+	url = ssh://git@github.com/jacobwilliams/roots-fortran
+[submodule "slsqp"]
+	path = slsqp
+	url = ssh://git@github.com/jacobwilliams/slsqp
+[submodule "f90wrap"]
+	path = f90wrap
+	url = ssh://git@github.com/jameskermode/f90wrap
+[submodule "config_fortran"]
+	path = config_fortran
+	url = ssh://git@github.com/jannisteunissen/config_fortran
+[submodule "lookup_table_fortran"]
+	path = lookup_table_fortran
+	url = ssh://git@github.com/jannisteunissen/lookup_table_fortran
+[submodule "rng_fortran"]
+	path = rng_fortran
+	url = ssh://git@github.com/jannisteunissen/rng_fortran
+[submodule "kdtree2"]
+	path = kdtree2
+	url = ssh://git@github.com/jmhodges/kdtree2
+[submodule "ogpf"]
+	path = ogpf
+	url = ssh://git@github.com/kookma/ogpf
+[submodule "LaGriT"]
+	path = LaGriT
+	url = ssh://git@github.com/lanl/LaGriT
+[submodule "qmd-progress"]
+	path = qmd-progress
+	url = ssh://git@github.com/lanl/qmd-progress
+[submodule "coretran"]
+	path = coretran
+	url = ssh://git@github.com/leonfoks/coretran
+[submodule "libnegf"]
+	path = libnegf
+	url = ssh://git@github.com/libnegf/libnegf
+[submodule "neural-fortran"]
+	path = neural-fortran
+	url = ssh://git@github.com/modern-fortran/neural-fortran
+[submodule "tcp-client-server"]
+	path = tcp-client-server
+	url = ssh://git@github.com/modern-fortran/tcp-client-server
+[submodule "tsunami"]
+	path = tsunami
+	url = ssh://git@github.com/modern-fortran/tsunami
+[submodule "NJOY2016"]
+	path = NJOY2016
+	url = ssh://git@github.com/njoy/NJOY2016
+[submodule "pencil-code"]
+	path = pencil-code
+	url = ssh://git@github.com/pencil-code/pencil-code
+[submodule "atomsk"]
+	path = atomsk
+	url = ssh://git@github.com/pierrehirel/atomsk
+[submodule "numerical-methods-fortran"]
+	path = numerical-methods-fortran
+	url = ssh://git@github.com/planelles20/numerical-methods-fortran
+[submodule "fprettify"]
+	path = fprettify
+	url = ssh://git@github.com/pseewald/fprettify
+[submodule "GALAHAD"]
+	path = GALAHAD
+	url = ssh://git@github.com/ralna/GALAHAD
+[submodule "fortran-error-handler"]
+	path = fortran-error-handler
+	url = ssh://git@github.com/samharrison7/fortran-error-handler
+[submodule "FKB"]
+	path = FKB
+	url = ssh://git@github.com/scientific-computing/FKB
+[submodule "fortran2018-examples"]
+	path = fortran2018-examples
+	url = ssh://git@github.com/scivision/fortran2018-examples
+[submodule "rpn-calc-fortran"]
+	path = rpn-calc-fortran
+	url = ssh://git@github.com/scivision/rpn-calc-fortran
+[submodule "psblas3"]
+	path = psblas3
+	url = ssh://git@github.com/sfilippone/psblas3
+[submodule "OpenCoarrays"]
+	path = OpenCoarrays
+	url = ssh://git@github.com/sourceryinstitute/OpenCoarrays
+[submodule "fparser"]
+	path = fparser
+	url = ssh://git@github.com/stfc/fparser
+[submodule "flibcpp"]
+	path = flibcpp
+	url = ssh://git@github.com/swig-fortran/flibcpp
+[submodule "swig"]
+	path = swig
+	url = ssh://git@github.com/swig-fortran/swig
+[submodule "FLAP"]
+	path = FLAP
+	url = ssh://git@github.com/szaghi/FLAP
+[submodule "FiNeR"]
+	path = FiNeR
+	url = ssh://git@github.com/szaghi/FiNeR
+[submodule "PENF"]
+	path = PENF
+	url = ssh://git@github.com/szaghi/PENF
+[submodule "StringiFor"]
+	path = StringiFor
+	url = ssh://git@github.com/szaghi/StringiFor
+[submodule "VTKFortran"]
+	path = VTKFortran
+	url = ssh://git@github.com/szaghi/VTKFortran
+[submodule "toml-f"]
+	path = toml-f
+	url = ssh://git@github.com/toml-f/toml-f
+[submodule "M_CLI"]
+	path = M_CLI
+	url = ssh://git@github.com/urbanjost/M_CLI
+[submodule "M_draw"]
+	path = M_draw
+	url = ssh://git@github.com/urbanjost/M_draw
+[submodule "M_history"]
+	path = M_history
+	url = ssh://git@github.com/urbanjost/M_history
+[submodule "M_io"]
+	path = M_io
+	url = ssh://git@github.com/urbanjost/M_io
+[submodule "M_process"]
+	path = M_process
+	url = ssh://git@github.com/urbanjost/M_process
+[submodule "M_strings"]
+	path = M_strings
+	url = ssh://git@github.com/urbanjost/M_strings
+[submodule "M_system"]
+	path = M_system
+	url = ssh://git@github.com/urbanjost/M_system
+[submodule "M_time"]
+	path = M_time
+	url = ssh://git@github.com/urbanjost/M_time
+[submodule "general-purpose-fortran"]
+	path = general-purpose-fortran
+	url = ssh://git@github.com/urbanjost/general-purpose-fortran
+[submodule "FEconv"]
+	path = FEconv
+	url = ssh://git@github.com/victorsndvg/FEconv
+[submodule "gtk-fortran"]
+	path = gtk-fortran
+	url = ssh://git@github.com/vmagnin/gtk-fortran
+[submodule "VTMOP"]
+	path = VTMOP
+	url = ssh://git@github.com/vtopt/VTMOP
+[submodule "qnstop"]
+	path = qnstop
+	url = ssh://git@github.com/vtopt/qnstop
+[submodule "datetime-fortran"]
+	path = datetime-fortran
+	url = ssh://git@github.com/wavebitscientific/datetime-fortran
+[submodule "functional-fortran"]
+	path = functional-fortran
+	url = ssh://git@github.com/wavebitscientific/functional-fortran
+[submodule "ntpoly"]
+	path = ntpoly
+	url = ssh://git@github.com/william-dawson/ntpoly
+[submodule "incompact3d"]
+	path = incompact3d
+	url = ssh://git@github.com/xcompact3d/incompact3d
+[submodule "OpenBLAS"]
+	path = OpenBLAS
+	url = ssh://git@github.com/xianyi/OpenBLAS
+[submodule "forpy"]
+	path = forpy
+	url = ssh://git@github.com/ylikx/forpy
+[submodule "fdict"]
+	path = fdict
+	url = ssh://git@github.com/zerothi/fdict
+[submodule "easy_plplot"]
+	path = easy_plplot
+	url = ssh://git@github.com/zoziha/easy_plplot
+[submodule "elsi_interface"]
+	path = elsi_interface
+	url = ssh://git@gitlab.com/elsi_project/elsi_interface
+[submodule "fortjson"]
+	path = fortjson
+	url = ssh://git@gitlab.com/elsi_project/fortjson
+[submodule "erloff"]
+	path = erloff
+	url = ssh://git@gitlab.com/everythingfunctional/erloff
+[submodule "iso_varying_string"]
+	path = iso_varying_string
+	url = ssh://git@gitlab.com/everythingfunctional/iso_varying_string
+[submodule "jsonff"]
+	path = jsonff
+	url = ssh://git@gitlab.com/everythingfunctional/jsonff
+[submodule "parff"]
+	path = parff
+	url = ssh://git@gitlab.com/everythingfunctional/parff
+[submodule "quaff"]
+	path = quaff
+	url = ssh://git@gitlab.com/everythingfunctional/quaff
+[submodule "sqliteff"]
+	path = sqliteff
+	url = ssh://git@gitlab.com/everythingfunctional/sqliteff
+[submodule "strff"]
+	path = strff
+	url = ssh://git@gitlab.com/everythingfunctional/strff
+[submodule "vegetables"]
+	path = vegetables
+	url = ssh://git@gitlab.com/everythingfunctional/vegetables
+[submodule "tapenade"]
+	path = tapenade
+	url = https://git@gitlab.inria.fr/tapenade/tapenade
