Add hfsolver from Ondřej Čertík

--- a/.gitmodules
+++ b/.gitmodules
@@ -625,3 +625,6 @@
 [submodule "tapenade"]
 	path = tapenade
 	url = https://git@gitlab.inria.fr/tapenade/tapenade
+[submodule "hfsolver"]
+	path = hfsolver
+	url = https://github.com/certik/hfsolver
