Ignore dirty changes in Castro, M_process, M_system

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,7 @@
 [submodule "Castro"]
 	path = Castro
 	url = git@github.com:AMReX-Astro/Castro.git
+    ignore = dirty
 [submodule "CFL3D"]
 	path = CFL3D
 	url = git@github.com:nasa/CFL3D.git
@@ -544,12 +545,14 @@
 [submodule "M_process"]
 	path = M_process
 	url = ssh://git@github.com/urbanjost/M_process
+    ignore = dirty
 [submodule "M_strings"]
 	path = M_strings
 	url = ssh://git@github.com/urbanjost/M_strings
 [submodule "M_system"]
 	path = M_system
 	url = ssh://git@github.com/urbanjost/M_system
+    ignore = dirty
 [submodule "M_time"]
 	path = M_time
 	url = ssh://git@github.com/urbanjost/M_time
