--- a/.gitmodules
+++ b/.gitmodules
@@ -631,3 +631,9 @@
 [submodule "hfsolver"]
 	path = hfsolver
 	url = https://github.com/certik/hfsolver
+[submodule "tracmass"]
+	path = tracmass
+	url = ssh://git@github.com/TRACMASS/tracmass.git
+[submodule "qcxms"]
+	path = qcxms
+	url = ssh://git@github.com/qcxms/qcxms.git
