Fix MESA/mesa; remove dependent subprojects

--- a/.gitmodules
+++ b/.gitmodules
@@ -98,8 +98,8 @@
 [submodule "lsdalton"]
 	path = lsdalton
 	url = git@gitlab.com:dalton/lsdalton.git
-[submodule "mesa"]
-	path = mesa
+[submodule "MESA"]
+	path = MESA
 	url = git@github.com:MESAHub/mesa.git
 [submodule "MITgcm"]
 	path = MITgcm
