Add new projects found on fortran-lang.org

--- a/.gitmodules
+++ b/.gitmodules
@@ -760,3 +760,12 @@
 [submodule "yaFyaml"]
 	path = yaFyaml
 	url = ssh://git@github.com/Goddard-Fortran-Ecosystem/yaFyaml
+[submodule "fortnet"]
+	path = fortnet
+	url = ssh://git@github.com/vanderhe/fortnet
+[submodule "tracmass"]
+	path = tracmass
+	url = ssh://git@github.com/TRACMASS/tracmass
+[submodule "qcxms"]
+	path = qcxms
+	url = ssh://git@github.com/qcxms/qcxms
