--- a/.gitmodules
+++ b/.gitmodules
@@ -760,3 +760,6 @@
 [submodule "qcxms"]
 	path = qcxms
 	url = ssh://git@github.com/qcxms/qcxms
+[submodule "GEOS-ESM-GEOS_Util"]
+	path = GEOS-ESM-GEOS_Util
+	url = git@github.com:GEOS-ESM/GEOS_Util.git
