Update projects from fortran-lang.org; add MOM6

--- a/.gitmodules
+++ b/.gitmodules
@@ -763,3 +763,6 @@
 [submodule "GEOS-ESM-GEOS_Util"]
 	path = GEOS-ESM-GEOS_Util
 	url = git@github.com:GEOS-ESM/GEOS_Util.git
+[submodule "MOM6"]
+	path = MOM6
+	url = ssh://git@github.com/NOAA-GFDL/MOM6
