Add more projects from WRF

--- a/.gitmodules
+++ b/.gitmodules
@@ -5632,3 +5632,12 @@
 [submodule "examples@timkphd"]
 	path = examples@timkphd
 	url = ssh://git@github.com/timkphd/examples
+[submodule "WRFDA@wrf-model"]
+	path = WRFDA@wrf-model
+	url = git@github.com:wrf-model/WRFDA
+[submodule "WPS@wrf-model"]
+	path = WPS@wrf-model
+	url = git@github.com:wrf-model/WPS
+[submodule "OBSGRID@wrf-model"]
+	path = OBSGRID@wrf-model
+	url = git@github.com:wrf-model/OBSGRID
