Add caffeine@berkeleylab and update stats

--- a/.gitmodules
+++ b/.gitmodules
@@ -5641,3 +5641,6 @@
 [submodule "OBSGRID@wrf-model"]
 	path = OBSGRID@wrf-model
 	url = git@github.com:wrf-model/OBSGRID
+[submodule "caffeine@berkeleylab"]
+	path = caffeine@berkeleylab
+	url = https://github.com/berkeleylab/caffeine
