Add two new projects from fortran-lang mentions

--- a/.gitmodules
+++ b/.gitmodules
@@ -5644,3 +5644,9 @@
 [submodule "caffeine@berkeleylab"]
 	path = caffeine@berkeleylab
 	url = https://github.com/berkeleylab/caffeine
+[submodule "meumapps_ss@ORNL"]
+	path = meumapps_ss@ORNL
+	url = https://github.com/ORNL/meumapps_ss/
+[submodule "hbi@sozawa94"]
+	path = hbi@sozawa94
+	url = https://github.com/sozawa94/hbi
