Update from remote repos and update stats

--- a/.gitmodules
+++ b/.gitmodules
@@ -5332,9 +5332,6 @@
 [submodule "JKogb"]
 	path = JKogb@venovako
 	url = ssh://git@github.com/venovako/JKogb
-[submodule "easifem-base"]
-	path = easifem-base@vickysharma0812
-	url = ssh://git@github.com/vickysharma0812/easifem-base
 [submodule "FPL"]
 	path = FPL@victorsndvg
 	url = ssh://git@github.com/victorsndvg/FPL
@@ -5650,3 +5647,6 @@
 [submodule "hbi@sozawa94"]
 	path = hbi@sozawa94
 	url = https://github.com/sozawa94/hbi
+[submodule "base"]
+	path = base@easifem-fortran
+	url = git@github.com:easifem-fortran/base.git
