Update from remote repos and update stats

--- a/.gitmodules
+++ b/.gitmodules
@@ -1315,9 +1315,6 @@
 [submodule "statislib"]
 	path = statislib@Jim-215-Fisher
 	url = ssh://git@github.com/Jim-215-Fisher/statislib
-[submodule "3D_Convolusional_Filtering"]
-	path = 3D_Convolusional_Filtering@JoGebert
-	url = ssh://git@github.com/JoGebert/3D_Convolusional_Filtering
 [submodule "ewald-summation"]
 	path = ewald-summation@Jonas-Finkler
 	url = ssh://git@github.com/Jonas-Finkler/ewald-summation
@@ -1672,9 +1669,6 @@
 [submodule "openfast"]
 	path = openfast@OpenFAST
 	url = ssh://git@github.com/OpenFAST/openfast
-[submodule "L-GAME"]
-	path = L-GAME@OpenNWP
-	url = ssh://git@github.com/OpenNWP/L-GAME
 [submodule "OpenRadioss"]
 	path = OpenRadioss@OpenRadioss
 	url = ssh://git@github.com/OpenRadioss/OpenRadioss
@@ -2770,9 +2764,6 @@
 [submodule "benchmark_R_Julia_Fortran"]
 	path = benchmark_R_Julia_Fortran@driesbenoit
 	url = ssh://git@github.com/driesbenoit/benchmark_R_Julia_Fortran
-[submodule "EFDCPlus"]
-	path = EFDCPlus@dsi-llc
-	url = ssh://git@github.com/dsi-llc/EFDCPlus
 [submodule "GrowClust"]
 	path = GrowClust@dttrugman
 	url = ssh://git@github.com/dttrugman/GrowClust
@@ -5788,9 +5779,6 @@
 [submodule "sam-lib@SAP"]
 	path = sam-lib@SAP
 	url = ssh://git@github.com/SAP/sam-lib
-[submodule "code-ans-qnm-share@SYLau"]
-	path = code-ans-qnm-share@SYLau
-	url = ssh://git@github.com/SYLau/code-ans-qnm-share
 [submodule "bif@ScottBoyce"]
 	path = bif@ScottBoyce
 	url = ssh://git@github.com/ScottBoyce/bif
@@ -5836,9 +5824,6 @@
 [submodule "wumpus@YeonJu"]
 	path = wumpus@YeonJu
 	url = ssh://git@github.com/YeonJu/wumpus
-[submodule "iRainSnowHydrov1.0@YuningLynn"]
-	path = iRainSnowHydrov1.0@YuningLynn
-	url = ssh://git@github.com/YuningLynn/iRainSnowHydrov1.0
 [submodule "molpop-cep@aasensio"]
 	path = molpop-cep@aasensio
 	url = ssh://git@github.com/aasensio/molpop-cep
@@ -6334,3 +6319,6 @@
 [submodule "Strain_CGMD@ieebon"]
 	path = Strain_CGMD@ieebon
 	url = ssh://git@github.com/ieebon/Strain_CGMD
+[submodule "EFDCPlus_Stable@dsi-llc"]
+	path = EFDCPlus_Stable@dsi-llc
+	url = git@github.com:dsi-llc/EFDCPlus_Stable.git
