Add new projects from Beliavsky's list

--- a/.gitmodules
+++ b/.gitmodules
@@ -6313,3 +6313,234 @@
 [submodule "EFDCPlus_Stable@dsi-llc"]
 	path = EFDCPlus_Stable@dsi-llc
 	url = git@github.com:dsi-llc/EFDCPlus_Stable.git
+[submodule "archer2-fortran-inter@ARCHER2-HPC"]
+	path = archer2-fortran-inter@ARCHER2-HPC
+	url = ssh://git@github.com/ARCHER2-HPC/archer2-fortran-inter
+[submodule "GETELEC@AndKyr"]
+	path = GETELEC@AndKyr
+	url = ssh://git@github.com/AndKyr/GETELEC
+[submodule "HF-INTEGRALS@CloudChemScientific"]
+	path = HF-INTEGRALS@CloudChemScientific
+	url = ssh://git@github.com/CloudChemScientific/HF-INTEGRALS
+[submodule "snakedali@Doudna-lab"]
+	path = snakedali@Doudna-lab
+	url = ssh://git@github.com/Doudna-lab/snakedali
+[submodule "NEMS@EIAgov"]
+	path = NEMS@EIAgov
+	url = ssh://git@github.com/EIAgov/NEMS
+[submodule "Fortran-C-interoperability@HugoMVale"]
+	path = Fortran-C-interoperability@HugoMVale
+	url = ssh://git@github.com/HugoMVale/Fortran-C-interoperability
+[submodule "MHD@JaimanP1"]
+	path = MHD@JaimanP1
+	url = ssh://git@github.com/JaimanP1/MHD
+[submodule "SSMF@JosePizarro3"]
+	path = SSMF@JosePizarro3
+	url = ssh://git@github.com/JosePizarro3/SSMF
+[submodule "LinReTraCe@LinReTraCe"]
+	path = LinReTraCe@LinReTraCe
+	url = ssh://git@github.com/LinReTraCe/LinReTraCe
+[submodule "SWAP-SAMUCA@Murilodsv"]
+	path = SWAP-SAMUCA@Murilodsv
+	url = ssh://git@github.com/Murilodsv/SWAP-SAMUCA
+[submodule "XTANT-3@N-Medvedev"]
+	path = XTANT-3@N-Medvedev
+	url = ssh://git@github.com/N-Medvedev/XTANT-3
+[submodule "openmp-series-2024@NERSC"]
+	path = openmp-series-2024@NERSC
+	url = ssh://git@github.com/NERSC/openmp-series-2024
+[submodule "Equilibrate@Nicholaswogan"]
+	path = Equilibrate@Nicholaswogan
+	url = ssh://git@github.com/Nicholaswogan/Equilibrate
+[submodule "forwarddiff@Nicholaswogan"]
+	path = forwarddiff@Nicholaswogan
+	url = ssh://git@github.com/Nicholaswogan/forwarddiff
+[submodule "vdist-solver-fortran@Nkzono99"]
+	path = vdist-solver-fortran@Nkzono99
+	url = ssh://git@github.com/Nkzono99/vdist-solver-fortran
+[submodule "NanoGW@PARSEC-real-space-code"]
+	path = NanoGW@PARSEC-real-space-code
+	url = ssh://git@github.com/PARSEC-real-space-code/NanoGW
+[submodule "PARSEC@PARSEC-real-space-code"]
+	path = PARSEC@PARSEC-real-space-code
+	url = ssh://git@github.com/PARSEC-real-space-code/PARSEC
+[submodule "PhiPsi_XFEM_Fortran_Codes_Early_Version@PhiPsi-Software"]
+	path = PhiPsi_XFEM_Fortran_Codes_Early_Version@PhiPsi-Software
+	url = ssh://git@github.com/PhiPsi-Software/PhiPsi_XFEM_Fortran_Codes_Early_Version
+[submodule "fortran_arithmetic@PhiPsi-Software"]
+	path = fortran_arithmetic@PhiPsi-Software
+	url = ssh://git@github.com/PhiPsi-Software/fortran_arithmetic
+[submodule "findiff@PunchesMalone"]
+	path = findiff@PunchesMalone
+	url = ssh://git@github.com/PunchesMalone/findiff
+[submodule "DiallelX@ShiroHirano"]
+	path = DiallelX@ShiroHirano
+	url = ssh://git@github.com/ShiroHirano/DiallelX
+[submodule "Abaqus-Fortran-Subroutine@SpringNuance"]
+	path = Abaqus-Fortran-Subroutine@SpringNuance
+	url = ssh://git@github.com/SpringNuance/Abaqus-Fortran-Subroutine
+[submodule "openmp-for-cs@UoB-HPC"]
+	path = openmp-for-cs@UoB-HPC
+	url = ssh://git@github.com/UoB-HPC/openmp-for-cs
+[submodule "Chromatin_Code@achalmahajan1"]
+	path = Chromatin_Code@achalmahajan1
+	url = ssh://git@github.com/achalmahajan1/Chromatin_Code
+[submodule "rate@acooksy"]
+	path = rate@acooksy
+	url = ssh://git@github.com/acooksy/rate
+[submodule "proVBFH@alexanderkarlberg"]
+	path = proVBFH@alexanderkarlberg
+	url = ssh://git@github.com/alexanderkarlberg/proVBFH
+[submodule "msearch-1asset@cbusta"]
+	path = msearch-1asset@cbusta
+	url = ssh://git@github.com/cbusta/msearch-1asset
+[submodule "wannchi@ccao"]
+	path = wannchi@ccao
+	url = ssh://git@github.com/ccao/wannchi
+[submodule "appell@cran"]
+	path = appell@cran
+	url = ssh://git@github.com/cran/appell
+[submodule "public@cruna-toolkit"]
+	path = public@cruna-toolkit
+	url = ssh://git@github.com/cruna-toolkit/public
+[submodule "mpifort-io-example@dliptai"]
+	path = mpifort-io-example@dliptai
+	url = ssh://git@github.com/dliptai/mpifort-io-example
+[submodule "multio@ecmwf"]
+	path = multio@ecmwf
+	url = ssh://git@github.com/ecmwf/multio
+[submodule "DC@ejimeneztejero"]
+	path = DC@ejimeneztejero
+	url = ssh://git@github.com/ejimeneztejero/DC
+[submodule "cms2d@erdc"]
+	path = cms2d@erdc
+	url = ssh://git@github.com/erdc/cms2d
+[submodule "DLA-Future-Fortran@eth-cscs"]
+	path = DLA-Future-Fortran@eth-cscs
+	url = ssh://git@github.com/eth-cscs/DLA-Future-Fortran
+[submodule "HypoDD@fwaldhauser"]
+	path = HypoDD@fwaldhauser
+	url = ssh://git@github.com/fwaldhauser/HypoDD
+[submodule "nemo_eos@gnurser"]
+	path = nemo_eos@gnurser
+	url = ssh://git@github.com/gnurser/nemo_eos
+[submodule "tikz-fortran@huijunchen9260"]
+	path = tikz-fortran@huijunchen9260
+	url = ssh://git@github.com/huijunchen9260/tikz-fortran
+[submodule "fortran-fun@interkosmos"]
+	path = fortran-fun@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-fun
+[submodule "fortran-lmdb@interkosmos"]
+	path = fortran-lmdb@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-lmdb
+[submodule "fortran-modbus@interkosmos"]
+	path = fortran-modbus@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-modbus
+[submodule "fortran-zstd@interkosmos"]
+	path = fortran-zstd@interkosmos
+	url = ssh://git@github.com/interkosmos/fortran-zstd
+[submodule "fortranMR@jaiken17"]
+	path = fortranMR@jaiken17
+	url = ssh://git@github.com/jaiken17/fortranMR
+[submodule "local_dielectric_saturation@janneforsman"]
+	path = local_dielectric_saturation@janneforsman
+	url = ssh://git@github.com/janneforsman/local_dielectric_saturation
+[submodule "fortran-cpp-equivalents@jeffhole"]
+	path = fortran-cpp-equivalents@jeffhole
+	url = ssh://git@github.com/jeffhole/fortran-cpp-equivalents
+[submodule "MMA-in-Fortran@jeffreyguevaracorzo"]
+	path = MMA-in-Fortran@jeffreyguevaracorzo
+	url = ssh://git@github.com/jeffreyguevaracorzo/MMA-in-Fortran
+[submodule "NH-TOPOPT-FORTRAN@jeffreyguevaracorzo"]
+	path = NH-TOPOPT-FORTRAN@jeffreyguevaracorzo
+	url = ssh://git@github.com/jeffreyguevaracorzo/NH-TOPOPT-FORTRAN
+[submodule "mandelbrot-f@jesper-olsen"]
+	path = mandelbrot-f@jesper-olsen
+	url = ssh://git@github.com/jesper-olsen/mandelbrot-f
+[submodule "wignerSymbols@joeydumont"]
+	path = wignerSymbols@joeydumont
+	url = ssh://git@github.com/joeydumont/wignerSymbols
+[submodule "fortdb@jpf-x"]
+	path = fortdb@jpf-x
+	url = ssh://git@github.com/jpf-x/fortdb
+[submodule "graded@klkuhlm"]
+	path = graded@klkuhlm
+	url = ssh://git@github.com/klkuhlm/graded
+[submodule "flit@lanl"]
+	path = flit@lanl
+	url = ssh://git@github.com/lanl/flit
+[submodule "LMDZE@lguez"]
+	path = LMDZE@lguez
+	url = ssh://git@github.com/lguez/LMDZE
+[submodule "1-D-Supernova-shock-radius-evolution@lollocava00"]
+	path = 1-D-Supernova-shock-radius-evolution@lollocava00
+	url = ssh://git@github.com/lollocava00/1-D-Supernova-shock-radius-evolution
+[submodule "OllinSphere-BiB@malcubi"]
+	path = OllinSphere-BiB@malcubi
+	url = ssh://git@github.com/malcubi/OllinSphere-BiB
+[submodule "FuzzifiED_Fortran@mankai-chow"]
+	path = FuzzifiED_Fortran@mankai-chow
+	url = ssh://git@github.com/mankai-chow/FuzzifiED_Fortran
+[submodule "quasielasticbayes@mantidproject"]
+	path = quasielasticbayes@mantidproject
+	url = ssh://git@github.com/mantidproject/quasielasticbayes
+[submodule "GATT_DNS@marlonsmathias"]
+	path = GATT_DNS@marlonsmathias
+	url = ssh://git@github.com/marlonsmathias/GATT_DNS
+[submodule "BsaLib@miEsMar"]
+	path = BsaLib@miEsMar
+	url = ssh://git@github.com/miEsMar/BsaLib
+[submodule "SCSM2.5d@mswonscsm"]
+	path = SCSM2.5d@mswonscsm
+	url = ssh://git@github.com/mswonscsm/SCSM2.5d
+[submodule "coarray-halo-exchange@nncarlson"]
+	path = coarray-halo-exchange@nncarlson
+	url = ssh://git@github.com/nncarlson/coarray-halo-exchange
+[submodule "PixelFlow@nobu-n2002"]
+	path = PixelFlow@nobu-n2002
+	url = ssh://git@github.com/nobu-n2002/PixelFlow
+[submodule "WinNet@nuc-astro"]
+	path = WinNet@nuc-astro
+	url = ssh://git@github.com/nuc-astro/WinNet
+[submodule "Fast@onera"]
+	path = Fast@onera
+	url = ssh://git@github.com/onera/Fast
+[submodule "Steam@paspro"]
+	path = Steam@paspro
+	url = ssh://git@github.com/paspro/Steam
+[submodule "taurus_mix@project-taurus"]
+	path = taurus_mix@project-taurus
+	url = ssh://git@github.com/project-taurus/taurus_mix
+[submodule "ex-f90ish@richmit"]
+	path = ex-f90ish@richmit
+	url = ssh://git@github.com/richmit/ex-f90ish
+[submodule "WIN2PhaseNet@rintr-suzuki"]
+	path = WIN2PhaseNet@rintr-suzuki
+	url = ssh://git@github.com/rintr-suzuki/WIN2PhaseNet
+[submodule "fortran-in-go@ryanrocket"]
+	path = fortran-in-go@ryanrocket
+	url = ssh://git@github.com/ryanrocket/fortran-in-go
+[submodule "AHA-R1@sbudaev"]
+	path = AHA-R1@sbudaev
+	url = ssh://git@github.com/sbudaev/AHA-R1
+[submodule "HEDTOOLS@sbudaev"]
+	path = HEDTOOLS@sbudaev
+	url = ssh://git@github.com/sbudaev/HEDTOOLS
+[submodule "f2dace-artifact@spcl"]
+	path = f2dace-artifact@spcl
+	url = ssh://git@github.com/spcl/f2dace-artifact
+[submodule "exception_handling@tillackseb"]
+	path = exception_handling@tillackseb
+	url = ssh://git@github.com/tillackseb/exception_handling
+[submodule "FEM@viktorrobin"]
+	path = FEM@viktorrobin
+	url = ssh://git@github.com/viktorrobin/FEM
+[submodule "ForRF@xumi1993"]
+	path = ForRF@xumi1993
+	url = ssh://git@github.com/xumi1993/ForRF
+[submodule "SurfATT-iso@xumi1993"]
+	path = SurfATT-iso@xumi1993
+	url = ssh://git@github.com/xumi1993/SurfATT-iso
+[submodule "TransOpt@yangjio4849"]
+	path = TransOpt@yangjio4849
+	url = ssh://git@github.com/yangjio4849/TransOpt
