Fix issue with SeidarT@UMainedynamics after disk restore

--- a/.gitmodules
+++ b/.gitmodules
@@ -1957,9 +1957,6 @@
 [submodule "DigiTWind"]
 	path = DigiTWind@UMaine-W2
 	url = ssh://git@github.com/UMaine-W2/DigiTWind
-[submodule "SeidarT"]
-	path = SeidarT@UMainedynamics
-	url = ssh://git@github.com/UMainedynamics/SeidarT
 [submodule "QXMD"]
 	path = QXMD@USCCACS
 	url = ssh://git@github.com/USCCACS/QXMD
@@ -6544,3 +6541,6 @@
 [submodule "TransOpt@yangjio4849"]
 	path = TransOpt@yangjio4849
 	url = ssh://git@github.com/yangjio4849/TransOpt
+[submodule "SeidarT@UMainedynamics"]
+	path = SeidarT@UMainedynamics
+	url = https://github.com/UMainedynamics/SeidarT
