Add repo mentioned by Reuben Budiarja and verify others aleardy added

--- a/.gitmodules
+++ b/.gitmodules
@@ -6544,3 +6544,6 @@
 [submodule "SeidarT@UMainedynamics"]
 	path = SeidarT@UMainedynamics
 	url = https://github.com/UMainedynamics/SeidarT
+[submodule "GenASiS@GenASiS"]
+	path = GenASiS@GenASiS
+	url = https://github.com/GenASiS/GenASiS
