Add new projects from Beliavsky's list of GitHub Fortran projects

--- a/.gitmodules
+++ b/.gitmodules
@@ -6544,3 +6544,180 @@
 [submodule "yelmo"]
 	path = yelmo@palma-ice
 	url = ssh://git@github.com/palma-ice/yelmo
+[submodule "BESLE_v1.0@Afgr1087"]
+	path = BESLE_v1.0@Afgr1087
+	url = ssh://git@github.com/Afgr1087/BESLE_v1.0
+[submodule "NATRC@Arthur140"]
+	path = NATRC@Arthur140
+	url = ssh://git@github.com/Arthur140/NATRC
+[submodule "Fortran-Stencil-Microbenchmarks@CogGrinder"]
+	path = Fortran-Stencil-Microbenchmarks@CogGrinder
+	url = ssh://git@github.com/CogGrinder/Fortran-Stencil-Microbenchmarks
+[submodule "LAC-GRTM@GKIAN"]
+	path = LAC-GRTM@GKIAN
+	url = ssh://git@github.com/GKIAN/LAC-GRTM
+[submodule "PadeOps@Howland-Lab"]
+	path = PadeOps@Howland-Lab
+	url = ssh://git@github.com/Howland-Lab/PadeOps
+[submodule "pbepack@HugoMVale"]
+	path = pbepack@HugoMVale
+	url = ssh://git@github.com/HugoMVale/pbepack
+[submodule "ReCoDE-Turing-Patterns-and-Partial-Differential-Equations@ImperialCollegeLondon"]
+	path = ReCoDE-Turing-Patterns-and-Partial-Differential-Equations@ImperialCollegeLondon
+	url = ssh://git@github.com/ImperialCollegeLondon/ReCoDE-Turing-Patterns-and-Partial-Differential-Equations
+[submodule "AquaCrop@KUL-RSDA"]
+	path = AquaCrop@KUL-RSDA
+	url = ssh://git@github.com/KUL-RSDA/AquaCrop
+[submodule "Anharmonic-lattice-dynamics@KeivanS"]
+	path = Anharmonic-lattice-dynamics@KeivanS
+	url = ssh://git@github.com/KeivanS/Anharmonic-lattice-dynamics
+[submodule "pcs@MartinKarp"]
+	path = pcs@MartinKarp
+	url = ssh://git@github.com/MartinKarp/pcs
+[submodule "fort-fput@NotQuiteAwake"]
+	path = fort-fput@NotQuiteAwake
+	url = ssh://git@github.com/NotQuiteAwake/fort-fput
+[submodule "EigenExa@RIKEN-RCCS"]
+	path = EigenExa@RIKEN-RCCS
+	url = ssh://git@github.com/RIKEN-RCCS/EigenExa
+[submodule "OptimusPrime@RWatson54"]
+	path = OptimusPrime@RWatson54
+	url = ssh://git@github.com/RWatson54/OptimusPrime
+[submodule "VenusPT-tables@Razumovskyy"]
+	path = VenusPT-tables@Razumovskyy
+	url = ssh://git@github.com/Razumovskyy/VenusPT-tables
+[submodule "code-ans-qnm-share@SYLau"]
+	path = code-ans-qnm-share@SYLau
+	url = ssh://git@github.com/SYLau/code-ans-qnm-share
+[submodule "MLegS@UCBCFD"]
+	path = MLegS@UCBCFD
+	url = ssh://git@github.com/UCBCFD/MLegS
+[submodule "DesignTurb@YYgroup"]
+	path = DesignTurb@YYgroup
+	url = ssh://git@github.com/YYgroup/DesignTurb
+[submodule "3D-MGTM-HS@Yonfou"]
+	path = 3D-MGTM-HS@Yonfou
+	url = ssh://git@github.com/Yonfou/3D-MGTM-HS
+[submodule "gravity-modelling-with-polynomial-density@Yonfou"]
+	path = gravity-modelling-with-polynomial-density@Yonfou
+	url = ssh://git@github.com/Yonfou/gravity-modelling-with-polynomial-density
+[submodule "fortran_dnn_from_tf@ajfurlong"]
+	path = fortran_dnn_from_tf@ajfurlong
+	url = ssh://git@github.com/ajfurlong/fortran_dnn_from_tf
+[submodule "postg@aoterodelaroza"]
+	path = postg@aoterodelaroza
+	url = ssh://git@github.com/aoterodelaroza/postg
+[submodule "OceanWave3D-Fortran90@apengsigkarup"]
+	path = OceanWave3D-Fortran90@apengsigkarup
+	url = ssh://git@github.com/apengsigkarup/OceanWave3D-Fortran90
+[submodule "Diagenetic_model_LHeureux_2018@astro-turing"]
+	path = Diagenetic_model_LHeureux_2018@astro-turing
+	url = ssh://git@github.com/astro-turing/Diagenetic_model_LHeureux_2018
+[submodule "phenograss-example@bluegreen-labs"]
+	path = phenograss-example@bluegreen-labs
+	url = ssh://git@github.com/bluegreen-labs/phenograss-example
+[submodule "sprayHFs@bwbarr"]
+	path = sprayHFs@bwbarr
+	url = ssh://git@github.com/bwbarr/sprayHFs
+[submodule "vkompth@candebellavita"]
+	path = vkompth@candebellavita
+	url = ssh://git@github.com/candebellavita/vkompth
+[submodule "LAPS@chenshihelio"]
+	path = LAPS@chenshihelio
+	url = ssh://git@github.com/chenshihelio/LAPS
+[submodule "benchmark.f@davidpfister"]
+	path = benchmark.f@davidpfister
+	url = ssh://git@github.com/davidpfister/benchmark.f
+[submodule "daskr@davidpfister"]
+	path = daskr@davidpfister
+	url = ssh://git@github.com/davidpfister/daskr
+[submodule "MGITM@dpawlows"]
+	path = MGITM@dpawlows
+	url = ssh://git@github.com/dpawlows/MGITM
+[submodule "elfe3D@emsig"]
+	path = elfe3D@emsig
+	url = ssh://git@github.com/emsig/elfe3D
+[submodule "GR-Eye@fbraeu90"]
+	path = GR-Eye@fbraeu90
+	url = ssh://git@github.com/fbraeu90/GR-Eye
+[submodule "ForTimize@fedebenelli"]
+	path = ForTimize@fedebenelli
+	url = ssh://git@github.com/fedebenelli/ForTimize
+[submodule "RoadSurf@fmidev"]
+	path = RoadSurf@fmidev
+	url = ssh://git@github.com/fmidev/RoadSurf
+[submodule "BGK2D_GPU@gamati01"]
+	path = BGK2D_GPU@gamati01
+	url = ssh://git@github.com/gamati01/BGK2D_GPU
+[submodule "fortran-snake@grofz"]
+	path = fortran-snake@grofz
+	url = ssh://git@github.com/grofz/fortran-snake
+[submodule "smartpars@grofz"]
+	path = smartpars@grofz
+	url = ssh://git@github.com/grofz/smartpars
+[submodule "IMPACT-T@impact-lbl"]
+	path = IMPACT-T@impact-lbl
+	url = ssh://git@github.com/impact-lbl/IMPACT-T
+[submodule "rbsolve@jhardenberg"]
+	path = rbsolve@jhardenberg
+	url = ssh://git@github.com/jhardenberg/rbsolve
+[submodule "finite_difference@jlr581"]
+	path = finite_difference@jlr581
+	url = ssh://git@github.com/jlr581/finite_difference
+[submodule "osinco3d@jojoledemago"]
+	path = osinco3d@jojoledemago
+	url = ssh://git@github.com/jojoledemago/osinco3d
+[submodule "forthread@jordan4ibanez"]
+	path = forthread@jordan4ibanez
+	url = ssh://git@github.com/jordan4ibanez/forthread
+[submodule "LApx@lanl"]
+	path = LApx@lanl
+	url = ssh://git@github.com/lanl/LApx
+[submodule "ews@lanl"]
+	path = ews@lanl
+	url = ssh://git@github.com/lanl/ews
+[submodule "latte_traveltime@lanl"]
+	path = latte_traveltime@lanl
+	url = ssh://git@github.com/lanl/latte_traveltime
+[submodule "CDMFT-MOTT-ZEROS@lcrippa"]
+	path = CDMFT-MOTT-ZEROS@lcrippa
+	url = ssh://git@github.com/lcrippa/CDMFT-MOTT-ZEROS
+[submodule "USP-JEWEL@leo-barreto"]
+	path = USP-JEWEL@leo-barreto
+	url = ssh://git@github.com/leo-barreto/USP-JEWEL
+[submodule "PROFOIL@m-selig"]
+	path = PROFOIL@m-selig
+	url = ssh://git@github.com/m-selig/PROFOIL
+[submodule "qap@mhahsler"]
+	path = qap@mhahsler
+	url = ssh://git@github.com/mhahsler/qap
+[submodule "cosma_fortran_example@moritzleucke"]
+	path = cosma_fortran_example@moritzleucke
+	url = ssh://git@github.com/moritzleucke/cosma_fortran_example
+[submodule "MESSY@pau-amaro-seoane"]
+	path = MESSY@pau-amaro-seoane
+	url = ssh://git@github.com/pau-amaro-seoane/MESSY
+[submodule "triptych@pau-amaro-seoane"]
+	path = triptych@pau-amaro-seoane
+	url = ssh://git@github.com/pau-amaro-seoane/triptych
+[submodule "OPS@rivm-syso"]
+	path = OPS@rivm-syso
+	url = ssh://git@github.com/rivm-syso/OPS
+[submodule "forIGES@rweed"]
+	path = forIGES@rweed
+	url = ssh://git@github.com/rweed/forIGES
+[submodule "LWPC@space-physics"]
+	path = LWPC@space-physics
+	url = ssh://git@github.com/space-physics/LWPC
+[submodule "TSE@stegmaja"]
+	path = TSE@stegmaja
+	url = ssh://git@github.com/stegmaja/TSE
+[submodule "modpath-rw@upc-ghs"]
+	path = modpath-rw@upc-ghs
+	url = ssh://git@github.com/upc-ghs/modpath-rw
+[submodule "nshmp-haz-fortran@usgs"]
+	path = nshmp-haz-fortran@usgs
+	url = ssh://git@github.com/usgs/nshmp-haz-fortran
+[submodule "ciftbx@yayahjb"]
+	path = ciftbx@yayahjb
+	url = ssh://git@github.com/yayahjb/ciftbx
