Update from remote repos

--- a/.gitmodules
+++ b/.gitmodules
@@ -316,9 +316,6 @@
 [submodule "CaMa-Flood_v4"]
 	path = CaMa-Flood_v4@global-hydrodynamics
 	url = ssh://git@github.com/global-hydrodynamics/CaMa-Flood_v4
-[submodule "CaNS"]
-	path = CaNS@p-costa
-	url = git@github.com:p-costa/CaNS.git
 [submodule "CalculiX@Dhondtguido"]
 	path = CalculiX@Dhondtguido
 	url = ssh://git@github.com/Dhondtguido/CalculiX
@@ -2407,9 +2404,6 @@
 [submodule "STELLOPT"]
 	path = STELLOPT@PrincetonUniversity
 	url = ssh://git@github.com/PrincetonUniversity/STELLOPT
-[submodule "STEM-Fortran"]
-	path = STEM-Fortran@roh6608
-	url = ssh://git@github.com/roh6608/STEM-Fortran
 [submodule "STREAM2"]
 	path = STREAM2@jklinkenberg-benchmarks
 	url = ssh://git@github.com/jklinkenberg-benchmarks/STREAM2
@@ -2428,9 +2422,6 @@
 [submodule "SWAP-SAMUCA@Murilodsv"]
 	path = SWAP-SAMUCA@Murilodsv
 	url = ssh://git@github.com/Murilodsv/SWAP-SAMUCA
-[submodule "SWMF"]
-	path = SWMF@MSTEM-QUDA
-	url = ssh://git@github.com/MSTEM-QUDA/SWMF
 [submodule "SWMM5plus"]
 	path = SWMM5plus@CIMM-ORG
 	url = ssh://git@github.com/CIMM-ORG/SWMM5plus
@@ -2527,9 +2518,6 @@
 [submodule "TBFIT"]
 	path = TBFIT@Infant83
 	url = ssh://git@github.com/Infant83/TBFIT
-[submodule "TBmodels"]
-	path = TBmodels@aamaricci
-	url = ssh://git@github.com/aamaricci/TBmodels
 [submodule "THOR"]
 	path = THOR@NCSU-NCSG
 	url = ssh://git@github.com/NCSU-NCSG/THOR
@@ -6721,3 +6709,15 @@
 [submodule "ciftbx@yayahjb"]
 	path = ciftbx@yayahjb
 	url = ssh://git@github.com/yayahjb/ciftbx
+[submodule "CaNS@CaNS-World"]
+	path = CaNS@CaNS-World
+	url = ssh://git@github.com/CaNS-World/CaNS.git
+[submodule "SWMF@SWMFsoftware"]
+	path = SWMF@SWMFsoftware
+	url = ssh://git@github.com/SWMFsoftware/SWMF.git
+[submodule "DMFTtools@aamaricci"]
+	path = DMFTtools@aamaricci
+	url = ssh://git@github.com/aamaricci/DMFTtools
+[submodule "EDIpack2.0@aamaricci"]
+	path = EDIpack2.0@aamaricci
+	url = ssh://git@github.com/aamaricci/EDIpack2.0
